--- a/assets/css/sass/components/_custom_layout.scss
+++ b/assets/css/sass/components/_custom_layout.scss
@@ -6,6 +6,12 @@
     $CUSTOM LAYOUT
 \*------------------------------------*/
 
+.container_container {
+  &--align-left {
+    text-align: left;
+  }
+}
+
 .puls-quote {
   display: block;
   overflow: hidden;
