--- a/assets/css/sass/components/_home-grid.scss
+++ b/assets/css/sass/components/_home-grid.scss
@@ -60,6 +60,7 @@ h1.page-title--custom {
   font-size: 28px;
   line-height: 35px;
   color: #545454;
+  text-align: center;
   @media only screen and (max-width: 767px) {
       padding-bottom: 10px;
   }
